--- a/DoIt/Base.lproj/Main.storyboard
+++ b/DoIt/Base.lproj/Main.storyboard
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17A315i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17A315i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HAU-Qx-Xdb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Do It-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DoIt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="TasksViewController" customModule="DoIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4fL-cV-mLv">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -34,12 +35,106 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4fL-cV-mLv" secondAttribute="bottom" id="mFf-Cn-zE3"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Do It" id="5QD-iN-T3j">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="ReV-Ii-vcN"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="sDO-Qb-rI5">
+                            <connections>
+                                <action selector="plusTapped:" destination="BYZ-38-t0r" id="ZmT-Zg-Aue"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="4fL-cV-mLv" id="HYW-NQ-OrE"/>
+                        <segue destination="7AJ-ua-sq3" kind="show" identifier="addSegue" id="SZf-W6-lZc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="972" y="38.23088455772114"/>
+        </scene>
+        <!--Create Task View Controller-->
+        <scene sceneID="RhI-bb-sc5">
+            <objects>
+                <viewController id="7AJ-ua-sq3" customClass="CreateTaskViewController" customModule="DoIt" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PH2-JM-aZr"/>
+                        <viewControllerLayoutGuide type="bottom" id="ylF-vg-Yff"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BJI-bs-51D">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mza-Fb-8Sv">
+                                <rect key="frame" x="154.5" y="129" width="66.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Importante" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXf-cZ-1DP">
+                                <rect key="frame" x="145.5" y="220" width="84.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nqv-fB-ARt">
+                                <rect key="frame" x="66" y="160" width="243" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="S7Z-Xh-EKk">
+                                <rect key="frame" x="163" y="251" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhe-Qd-UeQ">
+                                <rect key="frame" x="165" y="372" width="45" height="30"/>
+                                <state key="normal" title="Añadir"/>
+                                <connections>
+                                    <action selector="addTapped:" destination="7AJ-ua-sq3" eventType="touchUpInside" id="cGF-ZO-EKU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lXf-cZ-1DP" firstAttribute="centerX" secondItem="BJI-bs-51D" secondAttribute="centerX" id="4L9-3w-dDp"/>
+                            <constraint firstItem="mza-Fb-8Sv" firstAttribute="centerX" secondItem="BJI-bs-51D" secondAttribute="centerX" id="4Wl-ou-A71"/>
+                            <constraint firstItem="S7Z-Xh-EKk" firstAttribute="top" secondItem="lXf-cZ-1DP" secondAttribute="bottom" constant="10" id="BKZ-kT-7lc"/>
+                            <constraint firstItem="xhe-Qd-UeQ" firstAttribute="centerX" secondItem="BJI-bs-51D" secondAttribute="centerX" id="EqZ-NV-ZPC"/>
+                            <constraint firstItem="nqv-fB-ARt" firstAttribute="leading" secondItem="BJI-bs-51D" secondAttribute="leadingMargin" constant="50" id="JVt-96-VNg"/>
+                            <constraint firstItem="xhe-Qd-UeQ" firstAttribute="top" secondItem="S7Z-Xh-EKk" secondAttribute="bottom" constant="90" id="MAf-78-uv1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nqv-fB-ARt" secondAttribute="trailing" constant="50" id="Q8p-7y-uR5"/>
+                            <constraint firstItem="nqv-fB-ARt" firstAttribute="centerX" secondItem="BJI-bs-51D" secondAttribute="centerX" id="TUw-Dq-m4c"/>
+                            <constraint firstItem="S7Z-Xh-EKk" firstAttribute="centerX" secondItem="BJI-bs-51D" secondAttribute="centerX" id="V2q-NR-ubT"/>
+                            <constraint firstItem="nqv-fB-ARt" firstAttribute="top" secondItem="mza-Fb-8Sv" secondAttribute="bottom" constant="10" id="Zgj-gL-hur"/>
+                            <constraint firstItem="lXf-cZ-1DP" firstAttribute="top" secondItem="nqv-fB-ARt" secondAttribute="bottom" constant="30" id="nAP-92-mIw"/>
+                            <constraint firstItem="mza-Fb-8Sv" firstAttribute="top" secondItem="PH2-JM-aZr" secondAttribute="bottom" constant="65" id="vsu-FI-gj8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="importantSwitch" destination="S7Z-Xh-EKk" id="66h-ff-HRZ"/>
+                        <outlet property="taskNameTextField" destination="nqv-fB-ARt" id="mHa-8U-k0n"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mf7-dX-DmP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1829.5999999999999" y="37.331334332833585"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3Tm-xN-RU2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HAU-Qx-Xdb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="igb-CG-Djk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WvY-Hl-ixz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9z5-Xw-u1V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="57" y="38"/>
         </scene>
     </scenes>
 </document>
